changed img links

--- a/Admission_Project/index.html
+++ b/Admission_Project/index.html
@@ -7,7 +7,7 @@
 <meta charset='utf-8'>
 <meta http-equiv='X-UA-Compatible' content='IE=edge'>
 <meta name='viewport' content='width=device-width, initial-scale=1'>
-<link rel='stylesheet' type='text/css' media='screen' href='/Admission Project/style.css'>
+<link rel='stylesheet' type='text/css' media='screen' href='/Admission_Project/style.css'>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -57,7 +57,7 @@
 
     <section id="recipes">
         <div class="loin">
-            <img src="/Admission Project/images/loin-cumberland.jpg" width="300" alt="Pork Loin with Cumberland Sauce of Red Fruit">
+            <img src="/Admission_Project/images/loin-cumberland.jpg" width="300" alt="Pork Loin with Cumberland Sauce of Red Fruit">
             <div class="loin-text">
                 <h3 class="loin-title">Pork Loin with Cumberland Sauce of Red Fruit</h3>
                 <p class="loin-description">
@@ -101,7 +101,7 @@
         </div>
 
         <div class="eggs">
-            <img src="/Admission Project/images/eggs.jpeg" width="300" alt="Scrambled Eggs with Mystery Sausage">
+            <img src="/Admission_Project/images/eggs.jpeg" width="300" alt="Scrambled Eggs with Mystery Sausage">
             <div class="eggs-text">
                 <h3 class="eggs-title">Scrambled Eggs with Mystery Sausage</h3>
                 <p class="eggs-description">
@@ -138,7 +138,7 @@
 
 <section id="bibliography">
     <div class="harris">
-        <img src="/Admission Project/images/books.jpg" width="300" alt="Thomas Harris 5 books set">
+        <img src="/Admission_Project/images/books.jpg" width="300" alt="Thomas Harris 5 books set">
         <div class="books-text">
             <h3 class="books-title">Hannibal Lecter Series Collection</h3>
             <h4>by Thomas Harris</h4>
@@ -167,7 +167,7 @@
     </div>
 
     <div class="poon">
-        <img src="/Admission Project/images/feeding.jpg" width="300" alt="Feeding Hannibal Cover">
+        <img src="/Admission_Project/images/feeding.jpg" width="300" alt="Feeding Hannibal Cover">
         <div class="books-text">
             <h3 class="books-title">Feeding Hannibal: A Connoisseur's Cookbook</h3>
             <h4>by Janice Poon</h4>
@@ -194,7 +194,7 @@
     <section id="filmography">
         <div class="column-left">
             <div class="movie">
-                <img src="/Admission Project/images/red-f.jpg">
+                <img src="/Admission_Project/images/red-f.jpg">
                 <div class="film-description">
                 <p>
                     <strong class="f-title">Red Dragon</strong>
@@ -206,7 +206,7 @@
                 </div>
             </div>
             <div class="movie">
-                <img src="/Admission Project/images/silence-f.jpg">
+                <img src="/Admission_Project/images/silence-f.jpg">
                 <div class="film-description">
                     <p>
                         <strong class="f-title">The Silence of the Lambs</strong>
@@ -220,7 +220,7 @@
         </div>
         <div class="column-right">
             <div class="movie">
-                <img src="/Admission Project/images/han-f.jpg">
+                <img src="/Admission_Project/images/han-f.jpg">
                 <div class="film-description">
                     <p>
                         <strong class="f-title">Hannibal</strong>
@@ -232,7 +232,7 @@
                     </div>
             </div>
             <div class="movie">
-                <img src="/Admission Project/images/rise-f.jpg">
+                <img src="/Admission_Project/images/rise-f.jpg">
                 <div class="film-description">
                     <p>
                         <strong class="f-title">Hannibal Rising</strong>
