--- a/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.html
+++ b/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.html
@@ -58,18 +58,18 @@ Use the CSS properties: display, position, margin and padding.-->
 <div class="prod-cards">
     <div class="prod-group-card">
         <img src="/Week_1_HTML_CSS/Day_02/Exercises/images/nb-socks.png" class="card-img">
-        <p class="card-header">Socks & Mittens</p>
-        <p class="card-text">Made from 100% sheep wool, in the naalbinding technique, and with a wooden needle</p>
+        <p class="card-header">SOCKS & MITTENS</p>
+        <p class="card-text">Made from 100% sheep wool in the naalbinding technique using authentic stitches</p>
     </div>
     <div class="prod-group-card">
-        <img src="" alt="bags">
-        <p class="card-header">Leather Bags & Accessories </p>
-        <p class="card-text">Crafted by hand, from real leather</p>
+        <img src="/Week_1_HTML_CSS/Day_02/Exercises/images/nb-socks.png" class="card-img">
+        <p class="card-header">LEATHER BAGS & ACCESSORIES </p>
+        <p class="card-text">Crafted by hand from genuine full-grain leather</p>
     </div>
     <div class="prod-group-card">
-        <img src="" alt="turnshoes">
-        <p class="card-header">Leather Turnshoes and Boots</p>
-        <p class="card-text">Crafted using authentic patterns and technologies, from real leather</p>
+        <img src="/Week_1_HTML_CSS/Day_02/Exercises/images/nb-socks.png" class="card-img">
+        <p class="card-header">TURNSHOES & BOOTS</p>
+        <p class="card-text">Crafted from genuine full-grain leather using authentic patterns and technologies</p>
     </div>
 </div>
 
