--- a/Week_1_HTML_CSS/Day_03/Exercises/exercises.html
+++ b/Week_1_HTML_CSS/Day_03/Exercises/exercises.html
@@ -138,21 +138,21 @@
     <div class="green-rec">
         <div class="white-rec6">
             <div id="grid-container6">
-                <div id="header" class="grid-item">Header
+                <div id="header" class="grid-item6">Header
                 </div>
-                <div id="hero" class="grid-item">Hero
+                <div id="hero" class="grid-item6">Hero
                 </div>
-                <div id="sidebar" class="grid-item">Sidebar
+                <div id="sidebar" class="grid-item6">Sidebar
                 </div>
-                <div id="main-content" class="grid-item">Main Content
+                <div id="main-content" class="grid-item6">Main Content
                 </div>
-                <div id="extra-content" class="grid-item">Extra Content
+                <div id="extra-content" class="grid-item6">Extra Content
                 </div>
-                <div id="related-images" class="grid-item">Related Images
+                <div id="related-images" class="grid-item6">Related Images
                 </div>
-                <div id="related-posts" class="grid-item">Related Posts
+                <div id="related-posts" class="grid-item6">Related Posts
                 </div>
-                <div id="footer" class="grid-item">Footer
+                <div id="footer" class="grid-item6">Footer
                 </div>
             </div>
         </div>
@@ -166,21 +166,21 @@
 
     <div class="green-rec">
         <div id="grid-container7">
-            <div id="one" class="grid-item">1
+            <div id="one" class="grid-item7">1
             </div>
-            <div id="two" class="grid-item">2
+            <div id="two" class="grid-item7">2
             </div>
-            <div id="three" class="grid-item">3
+            <div id="three" class="grid-item7">3
             </div>
-            <div id="four" class="grid-item">4
+            <div id="four" class="grid-item7">4
             </div>
-            <div id="five" class="grid-item">5
+            <div id="five" class="grid-item7">5
             </div>
-            <div id="six" class="grid-item">6
+            <div id="six" class="grid-item7">6
             </div>
-            <div id="seven" class="grid-item">7
+            <div id="seven" class="grid-item7">7
             </div>
-            <div id="eight" class="grid-item">8
+            <div id="eight" class="grid-item7">8
             </div>
         </div>
     </div>
