--- a/Week_5_JS_Intro/Day_04/xp_exercises/home.html
+++ b/Week_5_JS_Intro/Day_04/xp_exercises/home.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script type="text/javascript" src="dc_script.js"></script>    
+    <script type="text/javascript" src="xp_script.js"></script>    
 </body>
 </html>
