--- a/Week_7_JS/Day_02/daily_challenge/home.html
+++ b/Week_7_JS/Day_02/daily_challenge/home.html
@@ -2,32 +2,18 @@
 <html>
  <head>
   <meta charset="utf-8" />
-  <title>Challenge: Mad Libs</title>
+  <title>DC</title>
  </head>
  <body>
-
-    <h1>Mad Libs</h1>
-
-    <form id="libform">
-        <label for="adjective1">Adjective:</label><br><input type="text" id="adjective1"><br>
-        <label for="noun1">Noun:</label><br><input type="text" id="noun1"><br>
-        <label for="person">Person:</label><br><input type="text" id="person"><br>
-        <label for="noun2">Noun:</label><br><input type="text" id="noun2"><br>
-        <label for="verb">Verb:</label><br><input type="text" id="verb"><br>
-        <label for="noun3">Noun:</label><br><input type="text" id="noun3"><br>
-        <label for="adjective2">Adjective:</label><br><input type="text" id="adjective2"><br>
-        <label for="noun4">Noun:</label><br><input type="text" id="noun4"><br>
-        <label for="noun5">Noun:</label><br><input type="text" id="noun5"><br>
-        <label for="place">A place:</label><br><input type="text" id="place"><br><br>
-        <button id="lib-button">Lib it!</button>
-    </form>
+    <form id="myForm">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name"><br>
+        <label for="lastName">Last Name:</label><br>
+        <input type="text" id="lastName" name="lastName"><br><br>
+        <button type="submit">Send</button>
+      </form>
     
-    <p>Generated story: <br>
-    <span id="story"></span>
-    </p>
-<br>
-<br>
-    <button id="shuffle">Shuffle!</button>
+      <div id="result"></div>
 
     <script type="text/javascript" src="dc_script.js"></script> 
 
