--- a/Week_7_JS/Day_02/xp_exercises/home.html
+++ b/Week_7_JS/Day_02/xp_exercises/home.html
@@ -6,43 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <article>
-        <h1> Some Facts </h1>
-        <h2> The Chocolate </h2>
-        <h3> History of the chocolate </h3>
-        <p> Chocolate is made from tropical Theobroma cacao tree seeds. 
-        Its earliest use dates back to the Olmec civilization in Mesoamerica.</p>
-        <p> After the European discovery of the Americas, chocolate became 
-        very popular in the wider world, and its demand exploded. </p>
-        <p> Chocolate has since become a popular food product that millions enjoy every day, 
-        thanks to its unique, rich, and sweet taste.</p> 
-        <p> But what effect does eating chocolate have on our health?</p> 
-    </article>  
-    <br>
-    <button id="getBold">Get BOLD, man!</button>
-    <br><br>
-    <form>
-        <label for="fname">First name:</label><br>
-        <input type="text" id="fname" name="firstname"><br>
-        <label for="lname">Last name:</label><br>
-        <input type="text" id="lname" name="lastname"><br><br>
-        <input type="submit" value="Submit" id="submit">
-      </form> 
-      <ul class="usersAnswer"></ul>
-
-    <br><br>
-
-    <p>Input radius value and get the volume of a sphere.</p> 
-        <form  id="MyForm"> 
-             <label for="radius">Radius</label><br><input type="text" name="radius" id="radius" required> <br>
-             <label for="volume">Volume</label><br><input type="text" name="volume" id="volume"> <br><br>
-             <input type="submit" value="Calculate" id="submit">    
-         </form> 
-
-    <p><strong>Hello</strong> I hope you are enjoying <strong>this</strong> class. At the
-        <strong>end</strong> you <strong>will</strong> be great Developers!
-        <strong>Enjoy</strong> the <strong>JavaScript </strong> lessons</p>
-
+    <form action="https://example.com" method="GET">
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="name"><br><br>
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" cols="50"></textarea><br><br>
+        <input type="submit" value="Send">
+      </form>
 
     <script type="text/javascript" src="xp_script.js"></script>    
 </body>
