Day 3 xp exercises and a daily challenge

--- a/Week_7_JS/Day_03/daily_challenge/home.html
+++ b/Week_7_JS/Day_03/daily_challenge/home.html
@@ -5,7 +5,7 @@
   <title></title>
  </head>
  <body>
-
+   <div id="result"></div>
 
     <script type="text/javascript" src="dc_script.js"></script> 
 
