--- a/Week_7_JS/Day_04/daily_challenge/home.html
+++ b/Week_7_JS/Day_04/daily_challenge/home.html
@@ -5,9 +5,14 @@
   <title></title>
  </head>
  <body>
+   <form id="gifForm">
+      <input type="text" id="searchInput" placeholder="Search for a GIF">
+      <button type="submit">Search</button>
+   </form>
+   <button id="deleteAllButton">Delete All</button>
+   <div id="gifContainer"></div>
 
-
-    <script type="text/javascript" src="dc_script.js"></script> 
+   <script type="text/javascript" src="dc_script.js"></script> 
 
  </body>
 </html>
