--- a/Week_8_NodeJS/Day_02/daily_challenge/public/home.html
+++ b/Week_8_NodeJS/Day_02/daily_challenge/public/home.html
@@ -15,7 +15,7 @@
     <div id="feedback"></div>
     <div id="score">Score: 0</div>
   </div>
-    <script type="text/javascript" src="dc_script.js"></script> 
+    <script type="text/javascript" src="./script.js"></script> 
 
  </body>
 </html>
